--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -11,8 +11,8 @@ buildscript {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
 
     defaultConfig {
         minSdkVersion 16
@@ -35,6 +35,8 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'com.facebook.android:audience-network-sdk:4.24.0'
+    compile 'com.android.support:appcompat-v7:25.0.0'
+	compile('com.facebook.android:audience-network-sdk:4.24.0') {
+		exclude group: "com.google.android.gms"
+    }
 }
